Changed image name

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ WORKDIR=$HOME/.ansible
 BINDIR=$WORKDIR/bin
 ETCDIR=$WORKDIR/etc
 PLAYDIR=$WORKDIR/play
-DOCKER_IMAGE=ansible-alpine
+DOCKER_IMAGE=ansiblec
 DOCKER_USERNAME=purplesrl
