--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-VERSION=1.0.8
-ANSIBLE_VERSION=2.8.5
+VERSION=1.0.9
+ANSIBLE_VERSION=2.9.0
 KEY=$HOME/.ssh/id_rsa
 RC=$HOME/.bashrc
-WORKDIR=$HOME/.ansible
+WORKDIR=$HOME/endian
 BINDIR=$WORKDIR/bin
 ETCDIR=$WORKDIR/etc
 PLAYDIR=$WORKDIR/play
