--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VERSION=1.0.9
 ANSIBLE_VERSION=2.9.0
 KEY=$HOME/.ssh/id_rsa
 RC=$HOME/.bashrc
-WORKDIR=$HOME/endian
+WORKDIR=$HOME/.ansible
 BINDIR=$WORKDIR/bin
 ETCDIR=$WORKDIR/etc
 PLAYDIR=$WORKDIR/play
